Ajustando erros de responsividade

--- a/conhecimento.html
+++ b/conhecimento.html
@@ -110,7 +110,7 @@
                     Copyright &copy; 2021; ESF - Todos os Direitos Reservados
                 </p>
                 <p>
-                    <a class="cont" href="https://api.whatsapp.com/send?phone=5511983457247&text=Bem%20Vindo%20%C3%A0%20Eletrot%C3%A9cnica%20Pontes!!" 
+                    <a class="https://api.whatsapp.com/send?phone=5511983457247" 
                     target="_blank">Contato: 11 983457247</a>
                 </p>
             </div>
