--- a/index.html
+++ b/index.html
@@ -29,12 +29,15 @@
                 <img src="Images/Fundo1.jpg" alt="">
             </div>
             <div class="banner">
-                <h2>Assistência 24h</h2>
+                <h2>
+                    <a href="https://api.whatsapp.com/send?phone=5511983457247" 
+                target="_blank">11 983457247</a>
+                </h2>
             <h1>ETP - Eletrotécnica Pontes</h1>
             <p>Gesse P. França</p>
             <a href="./orcamento.html"><button>Orçamento</button></a>
             <a href="./ofertas.html"><button>Ofertas</button></a>
-            <a class="whats-link" href="https://api.whatsapp.com/send?phone=5511983457247&text=Bem%20Vindo%20%C3%A0%20Eletrot%C3%A9cnica%20Pontes!!" target="_blank">
+            <a class="whats-link" href="https://api.whatsapp.com/send?phone=5511983457247" target="_blank">
                 <i class="fab fa-whatsapp"></i>
             </a>
             </div>
@@ -59,7 +62,7 @@
                     Copyright &copy; 2021; ESF - Todos os Direitos Reservados
                 </p>
                 <p>
-                    <a class="cont" href="https://api.whatsapp.com/send?phone=5511983457247&text=Bem%20Vindo%20%C3%A0%20Eletrot%C3%A9cnica%20Pontes!!" 
+                    <a class="cont" href="https://api.whatsapp.com/send?phone=5511983457247" 
                     target="_blank">Contato: 11 983457247</a>
                 </p>
             </div>
