--- a/orcamento.html
+++ b/orcamento.html
@@ -28,7 +28,7 @@
                     <h1>Orçamento</h1><br>
                     <form action="https://api.staticforms.xyz/submit" method="POST">
                         <input type="hidden" name="accessKey" value="741bedb2-6c54-49a4-aec1-56a37738208c">
-                        <input type="hidden" name="redirectTo" value="https://www.globo.com/">
+                        <input type="hidden" name="redirectTo" value="https://eric5f.github.io/Site-ETP/">
 
                         <div class="input-group">
                             <input type="text" class="field" id="nome" name="name" required>
@@ -78,7 +78,7 @@
                     Copyright &copy; 2021; ESF - Todos os Direitos Reservados
                 </p>
                 <p>
-                    <a class="cont" href="https://api.whatsapp.com/send?phone=5511983457247&text=Bem%20Vindo%20%C3%A0%20Eletrot%C3%A9cnica%20Pontes!!" 
+                    <a class="cont" href="https://api.whatsapp.com/send?phone=5511983457247" 
                     target="_blank">Contato: 11 983457247</a>
                 </p>
             </div>
