--- a/ofertas.html
+++ b/ofertas.html
@@ -34,7 +34,7 @@
                        <h2></h2>
                        <h3></h3>
                        <p></p>
-                       <a href="https://api.whatsapp.com/send?phone=5511983457247&text=Bem%20Vindo%20%C3%A0%20Eletrot%C3%A9cnica%20Pontes!!" 
+                       <a href="https://api.whatsapp.com/send?phone=5511983457247" 
                        target="_blank"><button>Saiba Mais</button></a>
                        </div>
                    </div>
@@ -46,7 +46,7 @@
                        <h2></h2>
                        <h3></h3>
                        <p></p>
-                       <a href="https://api.whatsapp.com/send?phone=5511983457247&text=Bem%20Vindo%20%C3%A0%20Eletrot%C3%A9cnica%20Pontes!!" 
+                       <a href="https://api.whatsapp.com/send?phone=5511983457247" 
                        target="_blank"><button>Saiba Mais</button></a>
                </div>
             </div>
@@ -58,11 +58,11 @@
                    <h2></h2>
                    <h3></h3>
                    <p></p>
-                   <a href="https://api.whatsapp.com/send?phone=5511983457247&text=Bem%20Vindo%20%C3%A0%20Eletrot%C3%A9cnica%20Pontes!!" 
+                   <a href="https://api.whatsapp.com/send?phone=5511983457247" 
                        target="_blank"><button>Saiba Mais</button></a>
            </div>
            </div>
-           <a class="whats-link" href="https://api.whatsapp.com/send?phone=5511983457247&text=Bem%20Vindo%20%C3%A0%20Eletrot%C3%A9cnica%20Pontes!!" target="_blank">
+           <a class="whats-link" href="https://api.whatsapp.com/send?phone=5511983457247" target="_blank">
             <i class="fab fa-whatsapp"></i>
         </a>
            </div>
@@ -86,7 +86,7 @@
                     Copyright &copy; 2021; ESF - Todos os Direitos Reservados
                 </p>
                 <p>
-                    <a class="cont" href="https://api.whatsapp.com/send?phone=5511983457247&text=Bem%20Vindo%20%C3%A0%20Eletrot%C3%A9cnica%20Pontes!!" 
+                    <a class="cont" href="https://api.whatsapp.com/send?phone=5511983457247" 
                     target="_blank">Contato: 11 983457247</a>
                 </p>
             </div>
