--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <ul class="menu">
                     <li class="menu-item"><a href="#home" class="menu-link">Home</a></li>
                     <li class="menu-item"><a href="./conhecimento.html" class="menu-link">Conhecimento</a></li>
-                    <li class="menu-item"><a href="./orcamento.html" class="menu-link">Orçamento</a></li>
+                    <li class="menu-item"><a href="./orcamento.html" class="menu-link">Contato</a></li>
                     <li class="menu-item"><a href="./ofertas.html" class="menu-link">Ofertas</a></li>
                     
                 </ul>
