Site Pronto e Responsivo

--- a/orcamento.html
+++ b/orcamento.html
@@ -58,7 +58,7 @@
 </section>
 
 
-        <a class="whats-link" href="https://api.whatsapp.com/send?phone=5511983457247&text=Bem%20Vindo%20%C3%A0%20Eletrot%C3%A9cnica%20Pontes!!" target="_blank">
+        <a class="whats-link" href="https://api.whatsapp.com/send?phone=5511983457247" target="_blank">
             <i class="fab fa-whatsapp"></i>
         </a>
 
