--- a/conhecimento.html
+++ b/conhecimento.html
@@ -88,7 +88,7 @@
                 <div class="conhecimentos-img-wrapper">
                     <img class="imagem-on" src="./Images/Img-Center.png" alt="Imagem Conhecimentos">
                 </div>
-                <a class="whats-link" href="https://api.whatsapp.com/send?phone=5511983457247&text=Bem%20Vindo%20%C3%A0%20Eletrot%C3%A9cnica%20Pontes!!" target="_blank">
+                <a class="whats-link" href="https://api.whatsapp.com/send?phone=5511983457247" target="_blank">
                     <i class="fab fa-whatsapp"></i>
                 </a>
             </div>
