--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h1>ETP - Eletrotécnica Pontes</h1>
             <p>Gesse P. França</p>
             <a href="./orcamento.html"><button>Orçamento</button></a>
-            <a href="./ofertas.html"><button>Ofertas</button></a>
+            <a href="./vendas.html"><button>Ofertas</button></a>
             <a class="whats-link" href="https://api.whatsapp.com/send?phone=5511983457247" target="_blank">
                 <i class="fab fa-whatsapp"></i>
             </a>
@@ -50,7 +50,7 @@
                     <li class="menu-item"><a href="#home" class="menu-link">Home</a></li>
                     <li class="menu-item"><a href="./conhecimento.html" class="menu-link">Conhecimento</a></li>
                     <li class="menu-item"><a href="./orcamento.html" class="menu-link">Contato</a></li>
-                    <li class="menu-item"><a href="./ofertas.html" class="menu-link">Ofertas</a></li>
+                    <li class="menu-item"><a href="./vendas.html" class="menu-link">Ofertas</a></li>
                     
                 </ul>
             </nav>
