--- a/conhecimento.html
+++ b/conhecimento.html
@@ -13,7 +13,7 @@
     <meta name="keywords" content="motores, eletricos, Eletrotecnica, weg, bombas, Jacuzzi, Eberle, Kohlbach, Ksb, Siemens, Buffalo, Hercules">
     <meta name="robots" content="index">
 </head>
-<body>
+<body onload="TrocaImagem()">
     <div class="container">
         <div class="hamburguer">
             <div class="line" id="line1"></div>
@@ -99,7 +99,7 @@
                     <li class="menu-item"><a href="./index.html" class="menu-link">Home</a></li>
                     <li class="menu-item"><a href="./conhecimento.html" class="menu-link">Conhecimento</a></li>
                     <li class="menu-item"><a href="./orcamento.html" class="menu-link">Orçamento</a></li>
-                    <li class="menu-item"><a href="./ofertas.html" class="menu-link">Ofertas</a></li>
+                    <li class="menu-item"><a href="./vendas.html" class="menu-link">Ofertas</a></li>
                     
                 </ul>
             </nav>
@@ -118,5 +118,5 @@
         
     </div>    
 </body>
-<script src="script1.js"></script>
+<script src="script.js"></script>
 </html>
