--- a/orcamento.html
+++ b/orcamento.html
@@ -13,7 +13,7 @@
     <meta name="keywords" content="motores, eletricos, Eletrotecnica, weg, bombas, Jacuzzi, Eberle, Kohlbach, Ksb, Siemens, Buffalo, Hercules">
     <meta name="robots" content="index">
 </head>
-<body>
+<body onload="FundoQuad()">
     <div class="container">
         <div class="hamburguer">
             <div class="line" id="line1"></div>
@@ -74,7 +74,7 @@
                     <li class="menu-item"><a href="./index.html" class="menu-link">Home</a></li>
                     <li class="menu-item"><a href="./conhecimento.html" class="menu-link">Conhecimento</a></li>
                     <li class="menu-item"><a href="./orcamento.html" class="menu-link">Orçamento</a></li>
-                    <li class="menu-item"><a href="./ofertas.html" class="menu-link">Ofertas</a></li>
+                    <li class="menu-item"><a href="./vendas.html" class="menu-link">Ofertas</a></li>
                     
                 </ul>
             </nav>
