--- a/orcamento.html
+++ b/orcamento.html
@@ -30,7 +30,7 @@
 
         <form action="https://api.staticforms.xyz/submit" method="POST">
             <input type="hidden" name="accessKey" value="741bedb2-6c54-49a4-aec1-56a37738208c">
-            <input type="hidden" name="redirectTo" value="https://eric5f.github.io/Site-ETP/">
+            <input type="hidden" name="redirectTo" value="http://eric5f.github.io/Site-ETP/">
 
             <div class="input-group">
                 <input type="text" class="field" name="name" required>
@@ -49,7 +49,7 @@
                 <label class="field-label">Mensagem</label>
             </div>
             
-            <button type="submit" class="btn-ctt">Enviar</button><br>
+            <button onclick="Mensagem(this)" type="submit" class="btn-ctt">Enviar</button><br>
             <input type="reset" class="btn-res" value="Limpar">
 
         </form>
