--- a/conhecimento.html
+++ b/conhecimento.html
@@ -13,7 +13,7 @@
     <meta name="keywords" content="motores, eletricos, Eletrotecnica, weg, bombas, Jacuzzi, Eberle, Kohlbach, Ksb, Siemens, Buffalo, Hercules">
     <meta name="robots" content="index">
 </head>
-<body onload="TrocaImagem()">
+<body>
     <div class="container">
         <div class="hamburguer">
             <div class="line" id="line1"></div>
