--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <header id="home">
             <div class="img-wrapper">
-                <img src="Images/Fundo1.jpg" alt="">
+                <img src="./Images/Fundo1.jpg" alt="">
             </div>
             <div class="banner">
                 <h2>
@@ -47,7 +47,7 @@
         <aside class="sidebar">
             <nav>
                 <ul class="menu">
-                    <li class="menu-item"><a href="#home" class="menu-link">Home</a></li>
+                    <li class="menu-item"><a href="./index.html" class="menu-link">Home</a></li>
                     <li class="menu-item"><a href="./conhecimento.html" class="menu-link">Conhecimento</a></li>
                     <li class="menu-item"><a href="./orcamento.html" class="menu-link">Contato</a></li>
                     <li class="menu-item"><a href="./vendas.html" class="menu-link">Ofertas</a></li>
