--- a/orcamento.html
+++ b/orcamento.html
@@ -49,7 +49,7 @@
                 <label class="field-label">Mensagem</label>
             </div>
             
-            <button onclick="Mensagem(this)" type="submit" class="btn-ctt">Enviar</button><br>
+            <button onclick="Mensagem()" type="submit" class="btn-ctt">Enviar</button><br>
             <input type="reset" class="btn-res" value="Limpar">
 
         </form>
